--- a/index.html
+++ b/index.html
@@ -112,3 +112,59 @@
                             <td>3-4</td>
                             <td>Você ainda precisa melhorar. Que tal estudar mais sobre programação?</td>
                         </tr>
+                        <tr>
+                            <td>5-7</td>
+                            <td>Bom! Seu conhecimento em programação está satisfatório</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Perfeito! Você está muito bem informado sobre programação</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">Boa sorte na próxima!</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </section>  
+            <!--Lista de Respostas-->
+            <section>
+                <h2>Verifique suas respostas</h2>
+                <details>
+                    <summary>Clique aqui para ver as respostas do quiz</summary>
+                <ol>
+                    <li>HTML</li>
+                    <li>Domínio</li>
+                    <li>Ab23!kao8Anmd#</li>
+                    <li>1991</li>
+                    <li>Javascript, Java</li>
+                    <li>Arquivo deve ter extensão .html</li>
+                    <li>type</li>
+                    <li>Java</li>
+                </ol>
+                </details>
+            </section>
+            <!--Formulário de Feedback-->
+            <section>
+                <h2>Nos dê o seu feedback</h2>
+                <form>
+                    <fieldset>
+                        <legend>Informações de Contato</legend>
+                        <label for="nome">Nome: </label>
+                        <input type="text" id="nome" name="nome"> <br>
+                        <label for="email">Email: </label>
+                        <input type="email" id="email" name="email"> <br>
+                        <label for="comentarios">Comentários: </label> <br>
+                        <textarea name="comentarios" id="comentarios" rows="4" cols="40" placeholder="Digite seus comentários aqui"></textarea> <br>
+                        <button onclick="alert('FEEDBACK ENVIADO')">Envie o feedback</button>
+                    </fieldset>
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>&copy Quiz de programadores. Todos os direitos reservados</p>
+            <p>Para conhecer mais sobre mim <a href="./sobremim.html" target="_blank">clique aqui</a></p>
+        </footer>
+    </body>
+</html>
